--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,9 @@
-version: '3'
+version: '3.8'
 
 services:
-  nginx:
-    image: nginx:latest
+  web:
+    build: .
     ports:
-      - "80:80"
+      - "8190:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - .:/var/www
-    depends_on:
-      - php
-
-  php:
-    image: php:latest
-    volumes:
-      - ./var/www:/var/www
+      - ./www:/var/www/html/
